# Python-Foundation-Program-Q2-GUKKA-final-task

./: .gitignore  FinalV1-test.py  FinalV1.py  README.MD  docker-compose.yml  requirements.txt
packaging/: pyproject.toml
packaging/src/rssreader_arthur/: rssreader.py
packaging/tests/: rss-reader-test.py
web_app/: Dockerfile  FinalV1.py  app.py  delaystart.sh  main.py  requirements.txt
web_app/pginit/: 01-init.sh
