[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rssreader-arthur"
version = "0.1.4"
authors = [
  { name="artur", email="artur-shchipletsov@epam.com" },
]
description = "Python-Foundation-Program-Q2-GUKKA-final-task"
readme = "README.MD"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests~=2.28.1",
                "fpdf2~=2.5.6"]

[project.urls]
"Homepage" = "https://github.com/geexmmo/Python-Foundation-Program-Q2-GUKKA-final-task"
"Bug Tracker" = "https://github.com/geexmmo/Python-Foundation-Program-Q2-GUKKA-final-task/issues"

[project.scripts]
rss-reader = "rssreader_arthur:rssreader.main"